<resources>
    <string name="app_name">Anime watchlist</string>
    <string name="cd_otakuhub_logo">OtakuHub Logo</string>
    <string name="text_otakuhub">OtakuHub</string>
    <string name="hint_search">Search your movie...</string>
    <string name="cd_search_icon">Search Icon</string>
    <string name="text_watch_list">Watch List</string>
    <string name="header_latest">LATEST ANIME</string>
    <string name="header_upcoming">UPCOMING</string>
    <string name="header_top">TOP ANIME</string>
    <string name="header_for_you">FOR YOU</string>
    <string name="cd_back_arrow">Back</string>
    <string name="title_watchlist">Watchlist</string>
    <string name="subtitle_watchlist">All your favorite movies in one place</string>
    <string name="desc_profile">Profile</string>
    <string name="header_popular_action">Popular Action</string>
    <string name="header_top_romance">Top Romance</string>
    
    <!-- Auth Strings -->
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login_caps">LOGIN</string>
    <string name="no_account">Don\'t have an account yet?</string>
    <string name="sign_up"> Sign Up</string>
    <string name="sign_up_caps">SIGN UP</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="log_in"> Log In</string>
    <string name="logo_desc">Logo</string>
</resources>